# YodAI

./: .gitignore  LICENSE  README.md  pyproject.toml
data/baby_yodai/: baby_yodai.txt
src/baby_yodai/: README.md  inference.py  model.py  tokenizer.py
