[tool.poetry]
name = "yodai"
version = "0.1.0"
description = "A pathway to Yoda-style language generation, this is."
authors = ["Imanol Garcia Urtiaga <imanolgum@hotmail.com>"]
license = "MIT LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.7"
langchain-anthropic = "^0.3.0"
tqdm = "^4.67.0"
torch = "^2.5.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
